--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,10 @@
 // COLORS
-$color-primary: orangered;
+$color-primary: #33323d;
+$greensy: #5fb4a2;
+$dark-green: #203A4C;
+$whitesy: #FAFAFA;
+$white: #fff;
 
 // FONTS
-$font-stack: "Arial", sans-serif;
+$PublicSans: "Public Sans", "Arial", sans-serif;
+$Ibarra: "Ibarra Real Nova", "Arial", sans-serif;
