--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -1,2 +1,9 @@
 @import "visually-hidden";
 @import "container";
+@import "site-header";
+@import "intro-section";
+@import "hero-section";
+@import "project-section";
+@import "site-footer";
+@import "contact-site-header";
+@import "intouch-section";
