--- a/scss/blocks/_container.scss
+++ b/scss/blocks/_container.scss
@@ -1,9 +1,8 @@
 /* CONTAINER */
 .container {
   width: 100%;
-  max-width: 900px;
+  max-width: 1150px;
+  margin: 0 auto;
   padding-left: 20px;
   padding-right: 20px;
-  margin-left: auto;
-  margin-right: auto;
 }
