Change all modifications

--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -1,6 +1,7 @@
 @import "visually-hidden";
 @import "container";
 @import "site-header";
+@import "site-header__btn";
 @import "intro-section";
 @import "hero-section";
 @import "project-section";
