--- a/scss/blocks/_hero-section.scss
+++ b/scss/blocks/_hero-section.scss
@@ -4,6 +4,9 @@
   justify-content: space-between;
 }
 
+.hero-section__img{
+}
+
 .hero-section__content-wrapper {
   border-top: 2px solid rgba(51, 50, 61, 0.15);
   border-bottom: 2px solid rgba(51, 50, 61, 0.15);
@@ -55,5 +58,40 @@
     background-color: #000;
     color: $white;
     box-shadow: gray 2px 4px 8px 2px;
+  }
+}
+
+@include breakpoint-down (500px) {
+  .hero-section {
+    padding-top: 375px;
+    display: block;
+  }
+
+  .hero-section__content-wrapper {
+    border: none;
+    padding-top: 0px;
+    padding-bottom: 100px;
+    padding-right: 0;
+    padding-left: 0;
+  }
+
+  .hero-section__link {
+    margin-bottom: 100%;
+  }
+}
+
+@include breakpoint-down (940px) {
+  .hero-section__img{
+    padding-bottom: 50px;
+  }
+
+  .hero-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .hero-section__content-wrapper {
+    padding-bottom: 50px;
   }
 }
