--- a/scss/blocks/_project-section.scss
+++ b/scss/blocks/_project-section.scss
@@ -1,10 +1,13 @@
 .projects-section {
+  padding-top: 108px;
+  padding-bottom: 150px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
 .projects-section__heading {
+  margin: 0;
   max-width: 350px;
   font-family: $Ibarra;
   font-weight: 700;
@@ -15,9 +18,9 @@
 }
 
 .project-section__line {
-    border: 1px solid rgba(51, 50, 61, 0.15);
-    background-color: rgba(51, 50, 61, 0.15);
-    width: 534px;
+  border: 1px solid rgba(51, 50, 61, 0.15);
+  background-color: rgba(51, 50, 61, 0.15);
+  width: 534px;
 }
 
 .projects-section__link {
@@ -38,14 +41,43 @@
   }
 }
 
-@include breakpoint-down (1120px) {
-    .project-section__line {
-        width: 500px;
-    }
+@include breakpoint-down(1120px) {
+  .project-section__line {
+    width: 500px;
+  }
 }
 
-@include breakpoint-down (1070px) {
-    .project-section__line {
-        width: 400px;
-    }
+@include breakpoint-down(1070px) {
+  .project-section__line {
+    width: 400px;
+  }
+}
+@include breakpoint-down(970px) {
+  .project-section__line {
+    width: 300px;
+  }
+}
+@include breakpoint-down(900px) {
+  .project-section__line {
+    width: 113px;
+  }
+}
+
+@include breakpoint-down(700px) {
+  .projects-section {
+    padding-top: 108px;
+    padding-bottom: 150px;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .projects-section__heading {
+    max-width: 311px;
+    padding-bottom: 30px;
+  }
+
+  .project-section__line {
+    border: none;
+  }
 }
